refactor(tweet-api): simplify Javadoc and tidy tests