@@ -5,9 +5,8 @@ import com.github.tomakehurst.wiremock.WireMockServer;
 import org.junit.jupiter.api.BeforeEach;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
-import org.testcontainers.containers.PostgreSQLContainer;
-import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
+import org.testcontainers.postgresql.PostgreSQLContainer;
 
 import java.util.Collections;
 import java.util.List;
@@ -29,8 +28,8 @@ import static com.github.tomakehurst.wiremock.client.WireMock.*;
  */
 @Testcontainers
 public abstract class BaseIntegrationTest {
-    
-    protected static final PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:15-alpine")
+
+    protected static final PostgreSQLContainer postgres = new PostgreSQLContainer("postgres:15-alpine")
         .withDatabaseName("twitter_test")
         .withUsername("test")
         .withPassword("test");
@@ -52,7 +51,7 @@ public abstract class BaseIntegrationTest {
                     if (wireMockServer != null && wireMockServer.isRunning()) {
                         wireMockServer.stop();
                     }
-                    if (postgres != null && postgres.isRunning()) {
+                    if (postgres.isRunning()) {
                         postgres.stop();
                     }
                 }));
@@ -123,10 +122,10 @@ public abstract class BaseIntegrationTest {
     /**
      * Sets up WireMock stub for follower-api getFollowing endpoint.
      *
-     * @param userId          the user ID whose following list to retrieve
+     * @param userId           the user ID whose following list to retrieve
      * @param followingUserIds list of following user IDs to return
-     * @param page            page number (default: 0)
-     * @param size            page size (default: 100)
+     * @param page             page number (default: 0)
+     * @param size             page size (default: 100)
      */
     protected void setupFollowingStub(UUID userId, List<UUID> followingUserIds, int page, int size) {
         if (wireMockServer == null) {
@@ -139,7 +138,7 @@ public abstract class BaseIntegrationTest {
                 "login", "user_" + followingId.toString().substring(0, 8),
                 "createdAt", "2025-01-20T15:30:00Z"
             ))
-            .collect(Collectors.toList());
+            .toList();
 
         Map<String, Object> responseBody = Map.of(
             "content", content,
@@ -196,7 +195,7 @@ public abstract class BaseIntegrationTest {
                     .withHeader("Content-Type", "application/json")
                     .withBody("{\"error\":\"Internal Server Error\"}"))
         );
-        
+
         wireMockServer.stubFor(
             get(urlPathEqualTo("/api/v1/follows/" + userId + "/following"))
                 .willReturn(aResponse()
